@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-31T16:28:35Z",
-  "count_outdated" : 258,
-  "uniques_outdated" : 151,
-  "count" : 273,
-  "uniques" : 163,
+  "timestamp" : "2022-06-01T01:53:45Z",
+  "count_outdated" : 262,
+  "uniques_outdated" : 153,
+  "count" : 275,
+  "uniques" : 164,
   "clones" : [
-    {
-      "timestamp": "2022-05-17T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 1, 4 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-05-20T00:00:00Z",
       "count": 8,
@@ -28,10 +21,10 @@
     },
     {
       "timestamp": "2022-05-31T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
