@@ -1,12 +1,7 @@
 {
-  "count": 15,
+  "count": 13,
   "uniques": 8,
   "clones": [
-    {
-      "timestamp": "2022-05-17T00:00:00Z",
-      "count": 3,
-      "uniques": 2
-    },
     {
       "timestamp": "2022-05-20T00:00:00Z",
       "count": 8,
@@ -19,8 +14,8 @@
     },
     {
       "timestamp": "2022-05-31T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
